syntax = "proto3";

option csharp_namespace = "ClientsService.Grpc";

service ClientsGrpc {
  rpc CreateClient (CreateClientRequest) returns (ClientResponse);
  rpc GetAllClients (Empty) returns (ClientsListResponse);
  rpc GetClientById (GetClientByIdRequest) returns (ClientResponse);
  rpc UpdateClient (UpdateClientRequest) returns (ClientResponse);
  rpc DeactivateClient (DeactivateClientRequest) returns (ClientResponse);

  // Auth Service helper
  rpc GetClientByIdentifier (GetClientByIdentifierRequest) returns (ClientResponse);
}

message Empty {}

message CreateClientRequest {
  string fullName = 1;
  string email = 2;
  string username = 3;
  string birthDate = 4;
  string address = 5;
  string phoneNumber = 6;
  string password = 7;
}

message UpdateClientRequest {
  string id = 1;
  string fullName = 2;
  string email = 3;
  string username = 4;
  string birthDate = 5;
  string address = 6;
  string phoneNumber = 7;
  string password = 8;
}

message DeactivateClientRequest {
  string id = 1;
}

message GetClientByIdentifierRequest {
  string identifier = 1; // email OR username
}

message GetClientByIdRequest {
  string id = 1;
}

message ClientResponse {
  string id = 1;
  string fullName = 2;
  string email = 3;
  string username = 4;
  string birthDate = 5;
  string address = 6;
  string phoneNumber = 7;
  string passwordHash = 8;
  bool isActive = 9;
}

message ClientsListResponse {
  repeated ClientResponse clients = 1;
}
